<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/contact_drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pageColor"
    tools:context=".ContactActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/main_toolbar" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <fragment
                    android:id="@+id/map"
                    android:name="com.google.android.gms.maps.SupportMapFragment"
                    android:layout_width="match_parent"
                    android:layout_height="400dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/contact_us"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <ImageView
                        android:id="@+id/imageView4"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_weight="1"
                        android:background="@drawable/icon_address"
                        android:backgroundTint="@color/black"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:layout_weight="2"
                        android:text="Address"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
                        app:layout_constraintStart_toEndOf="@+id/imageView4"
                        app:layout_constraintTop_toTopOf="@+id/imageView4" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/address"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <ImageView
                        android:id="@+id/imageView5"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_weight="1"
                        android:background="@drawable/icon_phone"
                        android:backgroundTint="@color/black"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:layout_weight="2"
                        android:text="Phone"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        app:layout_constraintBottom_toBottomOf="@+id/imageView5"
                        app:layout_constraintStart_toEndOf="@+id/imageView5"
                        app:layout_constraintTop_toTopOf="@+id/imageView5" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/phone"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <ImageView
                        android:id="@+id/imageView6"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_weight="1"
                        android:background="@drawable/icon_mail"
                        android:backgroundTint="@color/black"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:layout_weight="2"
                        android:text="Email"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        app:layout_constraintBottom_toBottomOf="@+id/imageView6"
                        app:layout_constraintStart_toEndOf="@+id/imageView6"
                        app:layout_constraintTop_toTopOf="@+id/imageView6" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="24dp"
                    android:background="#c0c0c0" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="Send Us Your Message"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="16dp"
                    android:hint="Your Name">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/fullName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="16dp"
                    android:hint="Your Email">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/fullEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="16dp"
                    android:hint="Your Message">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/fullMessage"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btnSendMessage"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="32dp"
                    android:backgroundTint="#ef9273"
                    android:text="Send"
                    android:textColor="@color/black" />

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/white">

        <include layout="@layout/main_nav_drawer" />

    </RelativeLayout>

</androidx.drawerlayout.widget.DrawerLayout>